feat: support configurable static avatar rendering
